fix: change z-index of navbar so it takes precedence over other elements.

--- a/apps/javascript/src/challenges/quiz-app-with-timer/index.css
+++ b/apps/javascript/src/challenges/quiz-app-with-timer/index.css
@@ -4,13 +4,14 @@ body {
 
 .start-screen {
   position: absolute;
-  top: 0;
+  top: 60px;
   left: 0;
   right: 0;
   bottom: 0;
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 1;
 }
 
 .score-container {
